# trielext

./: CMakeLists.txt  README.md
archive/: v1.cpp
include/: lextsuggest.hpp  trie.hpp
src/: CMakeLists.txt  config.hpp.in  lextsuggest.cpp  main.cpp  trie.cpp
